Fix dropdowns extending past bottom of page
Fixes issue where dropdowns can extend passed the bottom of the page on the categories settings page.

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -6176,6 +6176,11 @@ button.bookmark,
   color: #cbcdd2;
 }
 
+.dropup .dropdown-toggle::after {
+  border-top: 0.375em solid;
+  border-bottom: 0;
+}
+
 .footer {
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
