Add Configured messages to addons media view
If an isConfigured method exists in an addon, adds a 'Configured' message to the addons media item view.

Also adds new semantic badges to admin.css and recompiles and updates the styleguide.

Closes https://github.com/vanilla/vanilla/issues/4862

--- a/applications/dashboard/scss/src/_type.scss
+++ b/applications/dashboard/scss/src/_type.scss
@@ -338,10 +338,15 @@ pre {
 //
 // Makes a badge element, usually used to display a count on a navigation item.
 //
+// .badge-danger - Danger color.
+// .badge-warning - Warning color.
+// .badge-info - Info color.
+// .badge-success - Success color.
+//
 // Markup:
 // <button class="btn btn-primary">
 //   Tags
-//   <span class="badge">42</span>
+//   <span class="badge {{modifier_class}}">42</span>
 // </button>
 //
 // Styleguide 1.9.
@@ -358,6 +363,13 @@ pre {
 
   .btn-group & {
     margin-top: - to-rem(2);
+  }
+}
+
+@each $semantic-color in map-keys($semantic-colors) {
+  $color: map-get($semantic-colors, $semantic-color);
+  .badge-#{$semantic-color} {
+    background-color: $color;
   }
 }
 
