Add btn-group collapsing
Change button group into a dropdown if it gets too long and tweak toolbar flex wrapping.

Add docs and compile styleguide.

Closes https://github.com/vanilla/vanilla/issues/4435

Closes https://github.com/vanilla/vanilla/issues/4957

--- a/applications/dashboard/scss/src/_analytics.scss
+++ b/applications/dashboard/scss/src/_analytics.scss
@@ -1,14 +1,26 @@
 
 // Vanilla Stats
 .toolbar-stats {
+  flex-wrap: wrap;
+  justify-content: space-between;
+
   > *:not(.nav-stats) {
     margin-top: $spacer * 2;
+
+      @include media-breakpoint-down(md) {
+        margin-top: $spacer;
+      }
+    }
+
+  > * {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 .toolbar > .nav-stats {
-  margin-right: 0;
-  flex-shrink: 1;
+  //margin-right: 0;
+  //flex-shrink: 1;
 }
 
 
