--- a/applications/dashboard/scss/src/_buttons.scss
+++ b/applications/dashboard/scss/src/_buttons.scss
@@ -233,13 +233,24 @@ button.btn-icon {
 
 // Button Group
 //
-// A button group.
+// A button group is a group of buttons, ofter used for pagers or filters on a page. The button group collapses
+// into a dropdown selector when if overflows past the window width.
+//
+// If you want to choose the point at which the button group collapses, you can specify a max width for the button
+// group using `data-max-width="*"` where `*` is a number, in pixels; or you can specify the button group container,
+// which the button group will never overflow outside of by setting `data-container-selector="*"` where `*` is the
+// jQuery selector string for the element.
 //
 // Markup:
-// <div class="btn-group">
-//   <button type="button" class="btn btn-secondary active">Button 1</button>
-//   <button type="button" class="btn btn-secondary">Button 2</button>
-//   <button type="button" class="btn btn-secondary">Button 3</button>
+// <div class="btn-group padded-bottom">
+//   <a class="btn btn-secondary active">Button 1</a>
+//   <a class="btn btn-secondary">Button 2</a>
+//   <a class="btn btn-secondary">Button 3</a>
+// </div>
+// <div class="btn-group" data-max-width="200">
+//   <a class="btn btn-secondary active">Button 1</a>
+//   <a class="btn btn-secondary">Button 2</a>
+//   <a class="btn btn-secondary">Button 3</a>
 // </div>
 //
 // Styleguide 4.3.
