--- a/applications/dashboard/scss/maps/_dashboard.scss
+++ b/applications/dashboard/scss/maps/_dashboard.scss
@@ -5,6 +5,7 @@
 @import '../src/chart-svg';
 @import '../src/daterangepicker';
 @import '../src/dropdown';
+@import '../src/error';
 @import '../src/footer';
 @import '../src/forms';
 @import '../src/media';
