--- a/applications/dashboard/scss/src/_error.scss
+++ b/applications/dashboard/scss/src/_error.scss
@@ -1,3 +1,5 @@
+// Specific styling for the Error splash screens
+
 .Section-Error {
   color: #000;
   font: 75%/1.7em "Helvetica Neue", Helvetica, arial, sans-serif;
