Remove the ill-named js-hijack class from confirm modals
The js-hijack class was used to signify that a modal's endpoint should be processed using ajax and to add the transient key to the request. However, most every time we use a confirm modal (js-modal-confirm), we also want the js-hijack functionality. This PR removes the js-hijack class. It adds a data-follow-link attribute that simply follows the link provided rather than processing the endpoint for the rare circumstances we want that to happen.

The js-hijack class also is apt to be confused with the existing Hijack class in Vanilla.

Partially addresses https://github.com/vanilla/vanilla/issues/3937

--- a/applications/dashboard/scss/src/_modal.scss
+++ b/applications/dashboard/scss/src/_modal.scss
@@ -65,9 +65,10 @@
 
 // Modal Confirm
 //
-// This modal navigates to the url if the user confirms and cancels the navigation if the user declines. It's often
-// paired with `.js-hijack` to delete content at the given endpoint. By default, the confirm modal has the `.modal-sm`
-// class attached to it, but this can be overridden.
+// This modal navigates to the url if the user confirms and cancels the navigation if the user declines.
+// If the confirm is to direct the user to a new page (rather than ajax-style processing content at an endpoint),
+// add the attribute: `data-follow-link: true`. By default, the confirm modal has the `.modal-sm` class
+// attached to it, but this can be overridden.
 //
 // Markup:
 // <a href="#" class="js-modal" data-modal-type="confirm">
