Update dependencies and fix lint/hint notices
* Update the dependencies in the dashboard application to work with node 7. 
* Fix many notices in javascript and scss files. 
* Recompile everything.

--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -58,12 +58,12 @@ blockquote, q {
 }
 
 textarea, input[type=text] {
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 .textarea-autosize {
-  transition: height 0.1s ease;
+  -webkit-transition: height 0.1s ease;
+          transition: height 0.1s ease;
   resize: none !important;
 }
 
@@ -580,7 +580,7 @@ div.FileUpload .CurrentImage {
   opacity: 0;
   filter: alpha(opacity=0);
   -webkit-transform: translate(-300px, 0) scale(4);
-  transform: translate(-300px, 0) scale(4);
+          transform: translate(-300px, 0) scale(4);
   direction: ltr;
   cursor: pointer;
 }
@@ -1077,9 +1077,9 @@ body > #Frame > .Head {
 
 .OptionsTitle {
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   background: url("images/ui_sprites.png") no-repeat 0 -101px;
   padding: 0;
   width: 21px;
@@ -1799,7 +1799,6 @@ overflow: hidden;
 
 .SearchForm .InputBox {
   width: 100%;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 14px;
   padding: 6px 25px 6px 8px;
@@ -5216,7 +5215,6 @@ input + .ReactSprite {
 
 /* Token input */
 ul.token-input-list {
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   border: 1px solid #aaa;
   color: #333;
@@ -5487,7 +5485,8 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
 }
 
 .SocialIcon {
-  transition: background-color 100ms;
+  -webkit-transition: background-color 100ms;
+          transition: background-color 100ms;
 }
 
 .SocialIcon .Icon,
@@ -5727,7 +5726,6 @@ Styleguide Definitions
 .item-attachment .dl-columns dd {
   float: left;
   padding: 0 10px;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -5949,7 +5947,8 @@ Styleguide Attachments
 }
 
 .twitter-card-loaded {
-  transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+          transition: all 0.2s ease;
   opacity: 1;
 }
 
@@ -5973,7 +5972,7 @@ Styleguide Attachments
 
 .highlight-effect {
   -webkit-animation: highlight .8s;
-  animation: highlight .8s;
+          animation: highlight .8s;
 }
 
 /* Groups section tweaks */
@@ -6028,8 +6027,8 @@ Styleguide Attachments
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+   -ms-user-select: none;
+       user-select: none;
   -webkit-user-select: none;
 }
 
