--- a/applications/dashboard/scss/src/_prettyprint.scss
+++ b/applications/dashboard/scss/src/_prettyprint.scss
@@ -1,6 +1,8 @@
 
 .main-row pre.prettyprint {
-  border: $border-width solid $border-color;
+  padding: $spacer / 2;
+  font-size: $font-size-sm;
+  border: $border-width solid $border-color !important;
   border-radius: $border-radius;
   background-color: transparent;
 }
@@ -8,8 +10,8 @@
 // Make code blocks in forms look disabled.
 .input-wrap pre.prettyprint {
   min-height: to-rem(36);
-  padding-top: 0.40625rem;
-  padding-bottom: 0.40625rem;
+  padding-top: .40625rem;
+  padding-bottom: .40625rem;
   line-height: $font-size-root * 1.5;
   background-color: $input-bg-disabled;
 }
