--- a/applications/dashboard/scss/src/_buttons.scss
+++ b/applications/dashboard/scss/src/_buttons.scss
@@ -31,8 +31,8 @@ button {
   line-height: normal;
   overflow: visible;
   padding: 0;
-  -webkit-appearance: button; /* for input */
-  -webkit-user-select: none; /* for button */
+  -webkit-appearance: button; // for input
+  -webkit-user-select: none; // for button
   -moz-user-select: none;
   -ms-user-select: none;
 }
@@ -193,7 +193,7 @@ fieldset[disabled] a.btn {
   }
 
   &.disabled {
-    border: none;
+    border: 0;
   }
 
   &.btn-icon-sm {
@@ -206,7 +206,7 @@ fieldset[disabled] a.btn {
 
 a.btn-icon,
 button.btn-icon {
-  opacity: 0.7;
+  opacity: .7;
 }
 
 
@@ -218,7 +218,7 @@ button.btn-icon {
   padding: $btn-icon-padding-v $btn-icon-padding-v * 2;
   margin: 0 0 0 .5rem;
   color: $grey-dark;
-  opacity: 0.7;
+  opacity: .7;
 
   svg {
     height: to-rem($btn-icon-height);
