--- a/applications/dashboard/scss/src/_card.scss
+++ b/applications/dashboard/scss/src/_card.scss
@@ -160,7 +160,7 @@
 
     .btn.btn-sm-rounded {
       min-width: 3.75rem;
-      padding: 0.0625rem 0.5rem;
+      padding: .0625rem .5rem;
       font-size: to-rem(9);
 
       svg {
