--- a/applications/dashboard/scss/src/_modal.scss
+++ b/applications/dashboard/scss/src/_modal.scss
@@ -219,7 +219,6 @@
   position: relative;
   max-height: calc(94vh - (2 * #{$header-block-height}));
   overflow-y: auto;
-
   padding: 0 $modal-inner-padding;
 
   .modal-confirm & {
@@ -269,6 +268,7 @@
     transform: none;
     opacity: 0;
   }
+
   &.in .modal-dialog {
     transform: none;
     -webkit-filter: none;
@@ -313,7 +313,7 @@
     display: block;
     width: 100%;
     height: 1rem;
-    box-shadow: inset 0px -.75rem .75rem 0px rgba(255,255,255,1);
+    box-shadow: inset 0 -.75rem .75rem 0 rgba(255,255,255,1);
     content: '';
   }
 }
@@ -363,22 +363,28 @@ button.close {
   ol {
     margin-left: 15px;
   }
+
   ul li {
     list-style: disc inside;
   }
+
   ol li {
     list-style: decimal inside;
   }
+
   ul ul,
   ol ul {
     margin-left: 30px;
+
     li {
       list-style: circle inside;
     }
   }
+
   ol ol,
   ul ol {
     margin-left: 15px;
+
     li {
       list-style: lower-latin inside;
     }
