--- a/applications/dashboard/scss/src/_toasters.scss
+++ b/applications/dashboard/scss/src/_toasters.scss
@@ -31,7 +31,7 @@
   background: #333;
   border: $border-width solid $black;
   opacity: .9;
-  box-shadow: inset 0px 0px 1px 0px rgba(255,255,255,0.72);
+  box-shadow: inset 0 0 1px 0 rgba(255,255,255,.72);
   border-radius: $border-radius;
 
   @include media-breakpoint-down(sm) {
