--- a/applications/dashboard/scss/src/_analytics.scss
+++ b/applications/dashboard/scss/src/_analytics.scss
@@ -4,23 +4,44 @@
   flex-wrap: wrap;
   justify-content: space-between;
 
-  > *:not(.nav-stats) {
-    margin-top: $spacer * 2;
-
-      @include media-breakpoint-down(md) {
-        margin-top: $spacer;
-      }
-    }
-
   > * {
     margin-left: auto;
     margin-right: auto;
   }
-}
 
-.toolbar > .nav-stats {
-  //margin-right: 0;
-  //flex-shrink: 1;
+  .toolbar-stats-slot {
+    margin-top: $spacer * 2;
+
+    @include media-breakpoint-down(md) {
+      margin-top: $spacer;
+    }
+  }
+
+  .toolbar-stats-date-picker {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: $spacer;
+
+    @include media-breakpoint-down(md) {
+      margin-top: 0;
+    }
+
+    > * {
+      margin-top: $spacer;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .filter-date {
+      padding-left: $spacer / 2;
+      padding-right: $spacer / 2;
+      min-width: to-rem(210) + $spacer;
+
+      &:after {
+        right: to-rem(9) + $spacer / 2;
+      }
+    }
+  }
 }
 
 
