--- a/applications/dashboard/scss/src/_daterangepicker.scss
+++ b/applications/dashboard/scss/src/_daterangepicker.scss
@@ -340,6 +340,7 @@ $daterangepicker-ranges-active-border-radius: $daterangepicker-border-radius !de
 
 .filter-date {
   position: relative;
+  min-width: to-rem(210);
   &:after {
     position: absolute;
     display: inline-block;
