--- a/plugins/editor/design/settings.css
+++ b/plugins/editor/design/settings.css
@@ -1,6 +1,7 @@
 .forceWysiwyg {
   opacity: 1;
-  transition: all 0.3s ease; }
+  -webkit-transition: all 0.3s ease;
+          transition: all 0.3s ease; }
 
 .forceWysiwygDisabled {
   opacity: 0;
@@ -8,4 +9,3 @@
   pointer-events: none;
   overflow: hidden;
   padding: 0 !important; }
-/*# sourceMappingURL=settings.css.map */
