--- a/plugins/editor/design/wysiwyg.css
+++ b/plugins/editor/design/wysiwyg.css
@@ -258,6 +258,34 @@ div.Quote {
   outline: none; }
   .editor-composer img {
     max-width: 100%; }
+  .editor-composer div.Spoiler {
+    padding: 10px 10px;
+    margin: 4px 10px 4px 0;
+    background-color: #e6e6e6;
+    border-radius: 3px; }
+  .editor-composer div.Spoiler p {
+    padding: 3px 0 3px 5px;
+    margin: 0;
+    border-left: 1px solid #818181;
+    border-left: 1px solid rgba(0, 0, 0, 0.2); }
+  .editor-composer pre {
+    display: block;
+    padding: 4px 8px;
+    margin: 1em 0;
+    font-size: 13px;
+    word-break: break-all;
+    word-wrap: break-word;
+    background: #ff9;
+    border-radius: 2px;
+    border: 1px solid #eec; }
+  .editor-composer pre code {
+    padding: 0;
+    font-size: inherit;
+    color: inherit;
+    white-space: pre-wrap;
+    background-color: transparent;
+    border: 0;
+    border-radius: 0; }
 
 /**
  * Adjust some styles explicitly within the editor composer. These match the
@@ -268,4 +296,3 @@ div.Quote {
 
 .editor-composer h2 {
   font-size: 18px; }
-/*# sourceMappingURL=wysiwyg.css.map */
