Hide images in Feed on dashboard homepage
Hide images in Feed on dashboard homepage.

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -9944,6 +9944,10 @@ strong,
   display: inline-block;
 }
 
+.FeedItem .FeedDescription img {
+  display: none;
+}
+
 .FeedItem .FeedDescription .details p {
   margin-bottom: 0;
   display: initial;
