Add styling to utility pages.

--- a/applications/dashboard/scss/maps/_dashboard.scss
+++ b/applications/dashboard/scss/maps/_dashboard.scss
@@ -5,7 +5,6 @@
 @import '../src/chart-svg';
 @import '../src/daterangepicker';
 @import '../src/dropdown';
-@import '../src/error';
 @import '../src/footer';
 @import '../src/forms';
 @import '../src/media';
@@ -22,3 +21,4 @@
 @import '../src/tutorials';
 @import '../src/tweaks';
 @import '../src/type';
+@import '../src/utility';
