Fix error background.

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -9744,7 +9744,7 @@ strong,
 }
 
 .Section-Error {
-  background: url("images/eyes.png") 30px 30px no-repeat #fff;
+  background: url("images/error.png") 30px 30px no-repeat #fff;
 }
 
 .SplashInfo {
