--- a/applications/dashboard/scss/src/_utility.scss
+++ b/applications/dashboard/scss/src/_utility.scss
@@ -12,7 +12,7 @@
 }
 
 .Section-Error  {
-  background: url('images/eyes.png') 30px 30px no-repeat #fff;
+  background: url('images/error.png') 30px 30px no-repeat #fff;
 }
 
 .SplashInfo {
