--- a/applications/dashboard/scss/style.scss
+++ b/applications/dashboard/scss/style.scss
@@ -1,4 +1,7 @@
+@import 'src/variables';
+@import 'legacy/variables';
 @import 'legacy/utilities';
 @import 'legacy/toolbar';
 @import 'legacy/style';
 @import 'legacy/jcrop';
+@import 'src/helpers';
