--- a/applications/dashboard/scss/maps/_dashboard.scss
+++ b/applications/dashboard/scss/maps/_dashboard.scss
@@ -8,6 +8,7 @@
 @import '../src/error';
 @import '../src/footer';
 @import '../src/forms';
+@import '../src/hero';
 @import '../src/media';
 @import '../src/mixins';
 @import '../src/modal';
