--- a/applications/dashboard/scss/src/_tutorials.scss
+++ b/applications/dashboard/scss/src/_tutorials.scss
@@ -1,25 +1,19 @@
+.video-section-heading {
+  @extend .full-border;
+  padding: $spacer 0;
+  font-weight: 500;
+}
 
-
-.hero {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: ($spacer * 2) $spacer;
-
-  > * {
-    flex-grow: 1;
-  }
-
+.Section-Tutorials {
   .label-selector {
     margin-left: 0;
     margin-right: 0;
   }
 
-  .hero-content {
-    padding: 0 $spacer * 6 0 $spacer * 4;
-    font-size: $font-size-tables;
-    text-align: center;
-    flex-shrink: 1;
+  .hero {
+    .label-selector-item {
+      flex: 0 0 100%;
+    }
   }
 
   .tagline {
@@ -32,56 +26,38 @@
     height: $spacer * 4;
   }
 
-  .hero-title {
-    @extend .h2;
+  .video.label-selector-item {
+    a {
+      color: $white;
+    }
+
+    .video-title {
+      font-size: $font-size-sm;
+      text-align: left;
+    }
+
+    .overlay {
+      background-color: rgba(0,0,0,.75);
+    }
+
+    &.current .overlay {
+      height: 100%;
+    }
+
+    svg {
+      width: 40%;
+    }
   }
 
-  .btn {
-    margin-top: $spacer * 2;
-  }
+  .video-section {
+    .info {
+      padding-top: $spacer;
+    }
 
-  .hero-media-wrapper {
-    flex-shrink: 0;
-  }
-}
-
-.video-section-heading {
-  @extend .full-border;
-  padding: $spacer 0;
-  font-weight: 500;
-}
-
-.video.label-selector-item {
-  a {
-    color: $white;
-  }
-
-  .video-title {
-    font-size: $font-size-sm;
-    text-align: left;
-  }
-
-  .overlay {
-    background-color: rgba(0,0,0,.75);
-  }
-
-  &.current .overlay {
-    height: 100%;
-  }
-
-  svg {
-    width: 40%;
-  }
-}
-
-.video-section {
-  .info {
-    padding-top: $spacer;
-  }
-
-  &:first-child {
-    .video-section-heading {
-      border-top: $border-width solid $grey-light;
+    &:first-child {
+      .video-section-heading {
+        border-top: $border-width solid $grey-light;
+      }
     }
   }
 }
