Break category-settings scss into its components
Add new components:
* Plank component
* Nestable component - works with Nestable.js
* Breadcrumbs component

Also:
* Removes some unnecessary scss extensions in favour of including mixins
* Updates Nestable.js implementation to use js-nestable-* class names
* Makes category reordering smoother

--- a/applications/dashboard/scss/maps/_dashboard.scss
+++ b/applications/dashboard/scss/maps/_dashboard.scss
@@ -1,5 +1,6 @@
 @import '../src/alert';
 @import '../src/analytics';
+@import '../src/breadcrumbs';
 @import '../src/buttons';
 @import '../src/card';
 @import '../src/chart-svg';
@@ -13,7 +14,9 @@
 @import '../src/modal';
 @import '../src/nav';
 @import '../src/navbar';
+@import '../src/nestable';
 @import '../src/panel';
+@import '../src/plank';
 @import '../src/prettyprint';
 @import '../src/scaffold';
 @import '../src/tables';
