--- a/applications/dashboard/scss/src/_type.scss
+++ b/applications/dashboard/scss/src/_type.scss
@@ -93,19 +93,11 @@ pre {
 //
 // No styleguide reference.
 
-.heading-h1-block {
-  @extend .full-border;
-  @extend .heading-h1;
-  padding-bottom: $spacer;
-}
-
-.heading-h1 {
+.content > h1 {
+  @include full-border(block);
   font-size: $font-size-lg;
   margin-bottom: 0;
-}
-
-.content > h1 {
-  @extend .heading-h1-block;
+  padding-bottom: $spacer;
 }
 
 // Header Block
@@ -132,18 +124,17 @@ pre {
 // Styleguide 1.4.1.
 
 .header-block {
-  display: flex;
+  @include full-border(flex);
   justify-content: space-between;
   align-items: center;
   padding-top: $spacer / 2;
   padding-bottom: $spacer / 2;
   min-height: $header-block-height;
-  @extend .full-border;
 
   h1 {
-    @extend .heading-h1;
     margin: 0;
     padding: ($spacer / 2) 0;
+    font-size: $font-size-lg;
   }
 }
 
@@ -226,10 +217,9 @@ pre {
   $header-menu-height: $header-block-height;
   $header-menu-padding: ($header-menu-height - $header-menu-font-size - ($header-menu-border-width * 2) - $border-width) / 2;
 
-  display: flex;
+  @include full-border(flex);
   justify-content: center;
   align-items: center;
-  @extend .full-border;
 
   .header-menu-item {
     padding: ($header-menu-padding) 0;
