--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -5205,6 +5205,59 @@ output {
   color: #fa2e1f;
 }
 
+.bigcrumbs {
+  border-bottom: solid 1px #e7e8e9;
+  fill: #555a62;
+  padding-left: 6px;
+}
+
+.bigcrumbs .crumb {
+  display: inline-block;
+  line-height: 24px;
+  padding: 6px 24px 6px 12px;
+  position: relative;
+  fill: #555a62;
+  color: #555a62;
+}
+
+.bigcrumbs .crumb:hover {
+  fill: #0291db;
+  color: #0291db;
+}
+
+.bigcrumbs .crumb:before, .bigcrumbs .crumb:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -1px;
+  bottom: -1px;
+  right: -12px;
+  width: 0;
+  border: solid 12px transparent;
+  border-top-width: 19px;
+  border-bottom-width: 19px;
+  border-left-color: #e7e8e9;
+}
+
+.bigcrumbs .crumb:after {
+  content: '';
+  border-left-color: #fff;
+  right: -11px;
+}
+
+.bigcrumbs .crumb:before {
+  content: '';
+}
+
+.bigcrumbs .crumb:last-child:before, .bigcrumbs .crumb:last-child:after {
+  display: none;
+}
+
+.bigcrumbs .icon-root {
+  padding: 0 8px;
+  margin-bottom: 4px;
+}
+
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
@@ -6574,14 +6627,6 @@ form ol li {
   list-style: none;
 }
 
-.row-padding-left, .form-group > .no-grid, .form-group .input-wrap-right {
-  padding-left: 1.125rem;
-}
-
-.row-padding-right, .form-group > .no-grid, .form-group .input-wrap-right {
-  padding-right: 1.125rem;
-}
-
 .form-group {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -6597,10 +6642,20 @@ form ol li {
   border-bottom: 0.0625rem dotted #e7e8e9;
 }
 
+.form-group > .no-grid {
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
+}
+
 .form-group > .label-wrap-wide {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+}
+
+.form-group .input-wrap-right {
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
 }
 
 @media (max-width: 543px) {
@@ -8546,6 +8601,70 @@ button.close {
   min-width: inherit;
 }
 
+.nestable-list,
+.nestable-list ul,
+.nestable-list ol,
+.nestable-dragel,
+.nestable-dragel ul,
+.nestable-dragel ol {
+  padding-left: 0;
+}
+
+.nestable-list li,
+.nestable-dragel li {
+  list-style: none;
+}
+
+.nestable-item .nestable-item,
+.nestable-item .nestable-placeholder {
+  margin-left: 1.875rem;
+}
+
+.nestable-item,
+.nestable-empty,
+.nestable-placeholder {
+  display: block;
+  position: relative;
+  margin: 0 0 0.375rem;
+  padding: 0;
+}
+
+.nestable-empty,
+.nestable-placeholder {
+  background: #f1faff;
+  border: 0.0625rem dashed #0291db;
+  cursor: grabbing;
+}
+
+.nestable-collapse {
+  position: absolute;
+  display: block;
+  width: 1.25rem;
+  height: 2.25rem;
+  left: 2.25rem;
+}
+
+.nestable-handle {
+  position: absolute;
+  display: block;
+  width: 2.25rem;
+  height: 2.25rem;
+  cursor: move;
+  cursor: grab;
+}
+
+.nestable-dragel {
+  position: absolute;
+  pointer-events: none;
+  z-index: 9999;
+  opacity: .8;
+  cursor: grabbing;
+}
+
+.nestable-content {
+  margin-bottom: 0.375rem;
+}
+
 .help {
   margin-bottom: 2.25rem;
   font-weight: 200;
@@ -8690,6 +8809,48 @@ button.close {
 
 .btn-control-panel.disabled:hover, .btn-control-panel:disabled:hover {
   background-color: #fff;
+}
+
+.plank-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 0.375rem;
+  min-height: 2.25rem;
+  background-color: #fbfcfc;
+  border: 0.0625rem solid #e7e8e9;
+  border-radius: 2px;
+}
+
+.plank-item svg {
+  height: 1rem;
+}
+
+.plank-title {
+  padding: 0 0.5625rem;
+}
+
+.plank-options {
+  color: #949aa2;
+  margin-left: auto;
+  margin-top: -0.0625rem;
+  margin-bottom: -0.0625rem;
+}
+
+.plank-options .dropdown-toggle {
+  padding: 0.375rem 0.625rem;
+  line-height: 1.375rem;
+}
+
+.plank-icon {
+  color: #949aa2;
+}
+
+.plank-icon:hover {
+  fill: rgba(85, 90, 98, 0.6);
 }
 
 .main-row pre.prettyprint {
@@ -9303,6 +9464,12 @@ button.close {
 }
 
 .video-section-heading {
+  display: block;
+  margin-left: -1.125rem;
+  margin-right: -1.125rem;
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
+  border-bottom: 0.0625rem solid #e7e8e9;
   padding: 1.125rem 0;
   font-weight: 500;
 }
@@ -9422,6 +9589,10 @@ ul {
   border-right: 0.0625rem solid #e7e8e9;
 }
 
+.nestable-collapse ~ .nestable-content > .plank-title {
+  padding-left: 2.4375rem;
+}
+
 h1, .h1,
 h2,
 .analytics-widget-header .title, .h2, .hero .hero-title,
@@ -9479,7 +9650,7 @@ pre {
   white-space: pre-wrap;
 }
 
-.full-border, .video-section-heading, .heading-h1-block, .content > h1, .header-block, .header-menu {
+.full-border {
   display: block;
   margin-left: -1.125rem;
   margin-right: -1.125rem;
@@ -9488,19 +9659,27 @@ pre {
   border-bottom: 0.0625rem solid #e7e8e9;
 }
 
-.heading-h1-block, .content > h1 {
-  padding-bottom: 1.125rem;
-}
-
-.heading-h1, .heading-h1-block, .content > h1, .header-block h1 {
+.content > h1 {
+  display: block;
+  margin-left: -1.125rem;
+  margin-right: -1.125rem;
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
+  border-bottom: 0.0625rem solid #e7e8e9;
   font-size: 1.125rem;
   margin-bottom: 0;
+  padding-bottom: 1.125rem;
 }
 
 .header-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-left: -1.125rem;
+  margin-right: -1.125rem;
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
+  border-bottom: 0.0625rem solid #e7e8e9;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -9515,6 +9694,7 @@ pre {
 .header-block h1 {
   margin: 0;
   padding: 0.5625rem 0;
+  font-size: 1.125rem;
 }
 
 .title-block {
@@ -9543,6 +9723,11 @@ pre {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-left: -1.125rem;
+  margin-right: -1.125rem;
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
+  border-bottom: 0.0625rem solid #e7e8e9;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -10069,167 +10254,6 @@ strong,
 
 .InformMessages .Messages.Errors li {
   list-style: none;
-}
-
-.dd {
-  color: #555a62;
-  padding: 0 0 18px;
-  position: relative;
-}
-
-.dd-list {
-  position: relative;
-}
-
-.dd-list .dd-list {
-  padding-left: 30px;
-}
-
-.dd-item,
-.dd-empty,
-.dd-placeholder {
-  display: block;
-  position: relative;
-  margin: 0;
-  padding: 0;
-  min-height: 2.25rem;
-}
-
-.dd-item > button {
-  border: 0;
-  background: none;
-  position: absolute;
-  top: 0;
-  left: 30px;
-  padding: 10px;
-  line-height: 1;
-  cursor: pointer;
-}
-
-.dd-item > button:active, .dd-item > button:hover {
-  color: #0291db;
-  fill: #0291db;
-}
-
-.dd-item .options {
-  position: absolute;
-  top: 0;
-  right: 0;
-  color: #949aa2;
-}
-
-.dd-item .options .dropdown-toggle {
-  padding: 0.375rem 0.625rem;
-  line-height: 1.375rem;
-}
-
-.dd-item .options svg {
-  height: 1rem;
-}
-
-.dd-handle {
-  padding: 0.625rem;
-  position: absolute;
-  margin: 0;
-  left: 0;
-  top: 0;
-  cursor: move;
-  cursor: grab;
-  line-height: 1;
-  color: #949aa2;
-}
-
-.dd-handle:hover {
-  fill: rgba(85, 90, 98, 0.6);
-}
-
-.dd-content {
-  display: block;
-  border: solid 1px #e7e8e9;
-  background: #fdfdff;
-  border-radius: 2px;
-  padding: 6px 9px 6px 60px;
-  margin: 3px 0;
-  line-height: 22px;
-}
-
-.dd-dragel {
-  position: absolute;
-  pointer-events: none;
-  z-index: 9999;
-  margin-top: 0;
-  margin-left: 0;
-  opacity: .8;
-  cursor: grabbing;
-}
-
-.dd-placeholder,
-.dd-empty {
-  margin: 3px 0;
-  padding: 0;
-  background: #f1faff;
-  border: 1px dashed #0291db;
-  min-height: 2.25rem;
-  border-radius: 2px;
-  cursor: grabbing;
-}
-
-.bigcrumbs {
-  border-bottom: solid 1px #e7e8e9;
-  fill: #555a62;
-  padding-left: 6px;
-}
-
-.bigcrumbs .crumb {
-  display: inline-block;
-  line-height: 24px;
-  padding: 6px 24px 6px 12px;
-  position: relative;
-  fill: #555a62;
-  color: #555a62;
-}
-
-.bigcrumbs .crumb:hover {
-  fill: #0291db;
-  color: #0291db;
-}
-
-.bigcrumbs .crumb:before, .bigcrumbs .crumb:after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: -1px;
-  bottom: -1px;
-  right: -12px;
-  width: 0;
-  border: solid 12px transparent;
-  border-top-width: 19px;
-  border-bottom-width: 19px;
-  border-left-color: #e7e8e9;
-}
-
-.bigcrumbs .crumb:after {
-  content: '';
-  border-left-color: #fff;
-  right: -11px;
-}
-
-.bigcrumbs .crumb:before {
-  content: '';
-}
-
-.bigcrumbs .crumb:last-child:before, .bigcrumbs .crumb:last-child:after {
-  display: none;
-}
-
-.bigcrumbs .icon-root {
-  padding: 0 8px;
-  margin-bottom: 4px;
-}
-
-.heading-bar .actions {
-  float: right;
-  padding: 6px 18px 0 0;
 }
 
 .jcrop-holder {
